added product info and buttons

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,18 @@
 </head>
 <body>
     <h1>Purchase Your Very Own Cassett or Vinyl Record Today of the Stranger Things Soundtrack!</h1>
-  <img class= "product-pic" id="vinyl" src="https://merchbar.imgix.net/product/vinylized/upc/90/889854809010.jpg?auto=format&fit=max&w=828" alt="">
-  <img class= "product-pic" id="cassette" src="https://m.media-amazon.com/images/I/71XjyBst73L._SY450_.jpg" alt="">
+  <img class= "product-pic" class="vinyl" src="https://merchbar.imgix.net/product/vinylized/upc/90/889854809010.jpg?auto=format&fit=max&w=828" alt="">
+  <h3 class="vinyl" id="vinyl-text">Stranger Things: Soundtrack from the Netflix Series, Season 4 will include key music covering various classic eras and styles as featured in "Stranger Things 4." 
+    The soundtrack album is conceptualized and produced by The Duffer Brothers and Nora Felder (Grammy and Emmy nominee Nora Felder has served as music supervisor for "Stranger Things" 
+    since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
+    album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
+  <button class="vinyl" id="vinyl-btn">Purchase Here</button>
+  <img class= "product-pic" class="cassette" src="https://m.media-amazon.com/images/I/71XjyBst73L._SY450_.jpg" alt="">
+  <h3 class="cassette" id="cassette-text">Stranger Things: Soundtrack from the Netflix Series, Season 4 will include key music covering various classic eras and styles as featured in "Stranger Things 4." 
+    The soundtrack album is conceptualized and produced by The Duffer Brothers and Nora Felder (Grammy and Emmy nominee Nora Felder has served as music supervisor for "Stranger Things" 
+    since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
+    album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
+  <button class="cassette" id="cassette-btn">Purchase Here</button>
   <script src="/main.js"></script>
   <script src="/js"></script>
 </body>
