added functionality to buttons

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
         since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
         album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
         <button class="vinyl" id="vinyl-btn">Purchase Here</button>
+        <script type="text/javascript">
+            document.getElementById("vinyl-btn").onclick = function () {
+                location.href = "https://www.merchbar.com/tv-shows-movies/stranger-things-music-from-netflix-series-var/stranger-things-music-from-netflix-series-var-vinyl-record?ucc=US&gclid=Cj0KCQjw2MWVBhCQARIsAIjbwoMSMz0qSWzfnZRP4E2kuLW0F91Jf6n2_Nhcr5thGYi87u84oKJ4j94aAmIrEALw_wcB";
+            };
+        </script>
     </div>
     <div class="cassette-prod">
         <img class= "product-pic" class="cassette" src="https://m.media-amazon.com/images/I/71XjyBst73L._SY450_.jpg" alt="">
@@ -30,6 +35,11 @@
         since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
         album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
         <button class="cassette" id="cassette-btn">Purchase Here</button>
+        <script type="text/javascript">
+            document.getElementById("cassette-btn").onclick = function () {
+                location.href = "https://www.amazon.com/Stranger-Things-Soundtrack-Netflix-Season/dp/B0B13TCSXC/ref=tmm_acd_swatch_0?_encoding=UTF8&qid=&sr=";
+            };
+        </script>
     </div>
 </div>
   <script src="/main.js"></script>
