--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         <button class="cassette" id="cassette-btn">Purchase Here</button>
         <script type="text/javascript">
             document.getElementById("cassette-btn").onclick = function () {
-                location.href = "https://www.amazon.com/Stranger-Things-Soundtrack-Netflix-Season/dp/B0B13TCSXC/ref=tmm_acd_swatch_0?_encoding=UTF8&qid=&sr=";
+                window.open("https://www.amazon.com/Stranger-Things-Soundtrack-Netflix-Season/dp/B0B13TCSXC/ref=tmm_acd_swatch_0?_encoding=UTF8&qid=&sr=") ;
             };
         </script>
     </div>
