window.open commands

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <button class="vinyl" id="vinyl-btn">Purchase Here</button>
         <script type="text/javascript">
             document.getElementById("vinyl-btn").onclick = function () {
-                location.href = "https://www.merchbar.com/tv-shows-movies/stranger-things-music-from-netflix-series-var/stranger-things-music-from-netflix-series-var-vinyl-record?ucc=US&gclid=Cj0KCQjw2MWVBhCQARIsAIjbwoMSMz0qSWzfnZRP4E2kuLW0F91Jf6n2_Nhcr5thGYi87u84oKJ4j94aAmIrEALw_wcB";
+                window.open ("https://www.merchbar.com/tv-shows-movies/stranger-things-music-from-netflix-series-var/stranger-things-music-from-netflix-series-var-vinyl-record?ucc=US&gclid=Cj0KCQjw2MWVBhCQARIsAIjbwoMSMz0qSWzfnZRP4E2kuLW0F91Jf6n2_Nhcr5thGYi87u84oKJ4j94aAmIrEALw_wcB");
             };
         </script>
     </div>
