--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,10 @@
         since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
         album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
         <button class="cassette" id="cassette-btn">Purchase Here</button>
+    <div>
+        <a href="/">Hover me</a>
+        <hr>
+    </div>
         <script type="text/javascript">
             document.getElementById("cassette-btn").onclick = function () {
                 window.open("https://www.amazon.com/Stranger-Things-Soundtrack-Netflix-Season/dp/B0B13TCSXC/ref=tmm_acd_swatch_0?_encoding=UTF8&qid=&sr=") ;
