hover me testing again

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
         album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
         <button class="cassette" id="cassette-btn">Purchase Here</button>
-    <div>
+    <div class="hover-me">
         <a href="/">Hover me</a>
         <hr>
     </div>
