added hover function to purchase here buttons

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         The soundtrack album is conceptualized and produced by The Duffer Brothers and Nora Felder (Grammy and Emmy nominee Nora Felder has served as music supervisor for "Stranger Things" 
         since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
         album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
-        <button class="vinyl" id="vinyl-btn">Purchase Here</button>
+        <a href="/" class="vinyl" id="vinyl-btn">Purchase Here</a>
         <script type="text/javascript">
             document.getElementById("vinyl-btn").onclick = function () {
                 window.open ("https://www.merchbar.com/tv-shows-movies/stranger-things-music-from-netflix-series-var/stranger-things-music-from-netflix-series-var-vinyl-record?ucc=US&gclid=Cj0KCQjw2MWVBhCQARIsAIjbwoMSMz0qSWzfnZRP4E2kuLW0F91Jf6n2_Nhcr5thGYi87u84oKJ4j94aAmIrEALw_wcB");
@@ -34,10 +34,7 @@
         The soundtrack album is conceptualized and produced by The Duffer Brothers and Nora Felder (Grammy and Emmy nominee Nora Felder has served as music supervisor for "Stranger Things" 
         since the show's inception and was nominated for a Music Supervision Grammy the first year the category was recognized by the Academy of Television Arts & Sciences). The compilation 
         album is produced by The Duffer Brothers and 2x Grammy nominee Timothy J. Smith.</h3>
-        <button class="cassette" id="cassette-btn">Purchase Here</button>
-    <div class="hover-me">
-        <a href="/">Hover me</a>
-    </div>
+        <a href="/" class="cassette" id="cassette-btn">Purchase Here</a>
         <script type="text/javascript">
             document.getElementById("cassette-btn").onclick = function () {
                 window.open("https://www.amazon.com/Stranger-Things-Soundtrack-Netflix-Season/dp/B0B13TCSXC/ref=tmm_acd_swatch_0?_encoding=UTF8&qid=&sr=") ;
